@startuml
!include style.puml

skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR_T4
skinparam classBackgroundColor MODEL_COLOR
skinparam ClassAttributeFontColor #FFFFFF

interface Model
class UniqueShiftList
class Shift
class ShiftDay
class ShiftTime
class RoleRequirement
class Role

Model -> UniqueShiftList
UniqueShiftList -> "0..*" Shift : contains >
Shift *--> "1" ShiftDay
Shift *--> "1" ShiftTime
Shift *--> "0..*" RoleRequirement

RoleRequirement -> Role

@enduml
